Add seller contact functionality to Market Match

--- a/add-crop.html
+++ b/add-crop.html
@@ -33,6 +33,9 @@
       <label for="price">Price per Kg (Ksh):</label>
       <input type="number" id="price" name="price" step="0.01" required/>
 
+      <label for="seller-contact">Your Contact (Phone Number):</label>
+      <input type="tel" id="seller-contact" name="seller-contact" pattern="[0-9]{10}" placeholder="e.g., 0712345678" required/>
+
       <button type="submit">Submit</button>
     </form>
 
